test/types/tuple/ferguson/tuple-size-mismatch-forall.good
tuple-size-mismatch-forall.chpl:3: error: tuple size must match the number of grouped variables
