test/types/tuple/ferguson/tuple-size-mismatch-forall.chpl
var A:[1..2] 2*int;

forall (a,b,c) in A {
  writeln("a=", a, " b=", b, " c=", c);
}
